[package]
name = "flag-mast-derive"
version = "0.1.2"
description = "Ergonomic Rust bit flags"
homepage = "https://github.com/toshokan/flag-mast"
repository = "https://github.com/toshokan/flag-mast"
documentation = "https://docs.rs/flag-mast"
authors = ["toshokan <toshokan@shojigate.net>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"
keywords = ["ffi", "bitflags"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "^1"
proc-macro-error = "^1"
syn = "^1"
quote = "^1"
