[package]
name = "flag-mast"
version = "0.2.0"
description = "Ergonomic Rust bit flags"
homepage = "https://github.com/toshokan/flag-mast"
repository = "https://github.com/toshokan/flag-mast"
documentation = "https://docs.rs/flag-mast-derive"
authors = ["toshokan <toshokan@shojigate.net>"]
readme = "../README.md"
license = "MIT OR Apache-2.0"
edition = "2018"
keywords = ["ffi", "bitflags"]

[dependencies]
flag-mast-derive = { version = "0.2.0", path = "../flag-mast-derive" }
